kube/graveyard/dashy/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: dashboards
  labels:
    app.kubernetes.io/name: dashy
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: dashy
  ports:
  - name: http
    port: 80
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy
  namespace: dashboards
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
  labels:
    app.kubernetes.io/name: dashy
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - dashy.matthew-stratton.me
    secretName: dashy-tls
  rules:
  - host: dashy.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: dashy
            port:
              number: 80
        path: /
        pathType: Prefix
